--- a/USTHWeather/app/src/main/res/layout/forecast_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/forecast_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,11 +26,12 @@
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:contentDescription="@string/SunWea"
-            android:src="@drawable/weather_icon2"/>
+            android:src="@drawable/sunny"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="@string/SunWea"
             android:gravity="center_vertical"/>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
+
