--- a/USTHWeather/app/src/main/res/values/string.xml
+++ b/USTHWeather/app/src/main/res/values/string.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">USTH Weather</string>
-    <string name="mon">Monday</string>
+    <string name="hello_world">Hello, world!</string>
+    <string name="hello_blank_fragment">hello blank</string>
+    <string name="search">search</string>
+    <string name="settings">Settings</string>
 </resources>
